fixed background overflow bug

--- a/css/media.css
+++ b/css/media.css
@@ -11,7 +11,11 @@
 }
 
 /* Query for Mobile */
-@media only screen and (max-width: 415px) {
+@media only screen and (max-width: 414px) {
+
+    body {
+        background-image: url("../img/background.jpg");
+    }
 
     .personalInfo {
         width: 100vw;
